kube/pod.yml
apiVersion: v1 
kind: Pod 
metadata:
  name: hello-small 
  labels:
    env: test 
spec:
  containers:
  - name: hello-small
    image: us-docker.pkg.dev/google-samples/containers/gke/hello-app:2.0
    imagePullPolicy: Always
    ports:
    - containerPort: 8443
      protocol: TCP
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: cloud.google.com/gke-nodepool
            operator: In
            values:
              - small
