kube/service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
    cloud.google.com/neg-status: '{"network_endpoint_groups":{"443":"k8s1-5713b0aa-default-helloweb-backend-443-c7a65047"},"zones":["us-central1-b","us-central1-c","us-central1-f"]}'
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{"service.alpha.kubernetes.io/app-protocols":"{\"helloweb-tls\":\"HTTP2\"}"},"labels":{"app":"hello"},"name":"helloweb-backend","namespace":"default"},"spec":{"ports":[{"name":"helloweb-tls","port":443,"targetPort":8443}],"selector":{"app":"hello","tier":"web"},"type":"NodePort"}}
    service.alpha.kubernetes.io/app-protocols: '{"helloweb-tls":"HTTP2"}'
  labels:
    app: hello
  name: helloweb-backend
spec:
  ports:
  - name: helloweb-tls
    nodePort: 31636
    port: 443
    protocol: TCP
    targetPort: 8443
  selector:
    app: hello
    tier: web
  sessionAffinity: None
  type: NodePort
