kube/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: letsencrypt-production
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/issuer":"letsencrypt-production","kubernetes.io/ingress.allow-http":"false","kubernetes.io/ingress.class":"gce","kubernetes.io/ingress.global-static-ip-name":"web-ip"},"labels":{"app":"hello"},"name":"web-ingress","namespace":"default"},"spec":{"defaultBackend":{"service":{"name":"helloweb-backend","port":{"number":443}}},"tls":[{"hosts":["gke.kaatz.dev"],"secretName":"yourdomain-tls"}]}}
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: web-ip
  labels:
    app: hello
  name: web-ingress
  namespace: default
spec:
  defaultBackend:
    service:
      name: helloweb-backend
      port:
        number: 443
  tls:
  - hosts:
    - gke.kaatz.dev
    secretName: yourdomain-tls
